[tool.poetry]
name = "reactor"
version = "0.1.0"
description = ""
authors = ["Igor Nazarenko <igor.n.nazarenko@gmail.com>"]

[tool.poetry.scripts]
reactor = "reactor:reactor"
history = "reactor:history"
shopper = "reactor:shopper"
test = "reactor:test"
init_db = "init_db:init_db"

[tool.poetry.dependencies]
python = "^3.8"
bravado = "^11.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
